force-app/main/default/objects/BOT_Thera_Class__c/BOT_Thera_Class__c.object-meta.xml
<CustomObject>
    <description>(BOT)It is created by BusinessOne Technologies Inc. It is used to store the Therapeutic Class with associated specialty provider Account.</description>
    <label>Therapeutic Class</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Therapeutic Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>