force-app/main/default/objects/BOT_Thera_Class__c/fields/BOT_Specialty_Provider__c.field-meta.xml
<CustomField>
    <fullName>BOT_Specialty_Provider__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>It is a Lookup relationship to Account (Specialty provider)</description>
    <label>Specialty Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Thera_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>