force-app/main/default/objects/BOT_Thera_Class__c/fields/BOT_Specialty_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_Specialty_Provider_ID__c</fullName>
    <description>To store the BOT Specialty Provider ID (Entity ID). It is used for BOT internal reference.</description>
    <label>Specialty Provider ID</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>