force-app/main/default/objects/BOT_Thera_Class__c/fields/BOT_Thera_Name__c.field-meta.xml
<CustomField>
    <fullName>BOT_Thera_Name__c</fullName>
    <description>To store the Thera class name.</description>
    <label>Thera Name</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>